@@ -1,5 +1,11 @@
 2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* operation/agentes/tactical.php: fix bug, and now show another column
+	with the type of server.
+	Fixes: 2825426
+
+2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/modules/manage_network_templates_form.php: fix bug that the column
 	group had incorrect content.
 	Fixes: 2815118
